openshift/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: openshift-master
subsets:
- addresses:
  - ip: <template-master-ip-address>
  ports:
  - name: 8443-tcp
    port: 8443
    protocol: TCP
