openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: openshift-master
spec:
  host: <template-ose-console-domain>
  port:
    targetPort: 8443
  to:
    kind: Service
    name: openshift-master
  tls:
    termination: passthrough
status:
  ingress: null
